# voran

./: .gitignore  Cargo.toml  README.md  build.rope  package.bat
src/: download.rs  git.rs  jellyfish_install.rs  lib.rs  main.rs  package.rs  packages.rs
src/_lib/: download.rs  mod.rs  packages.rs  update.rs
src/cli/: install.rs  list.rs  mod.rs  remote.rs  uninstall.rs  update.rs
tests/: packages.rs
