[package]
name = "voran"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
directories = "4.0.1"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
reqwest = { version = "0.11.11", features = ["stream"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
indicatif = "0.17.0"
failure = "0.1.8"
exitfailure = "0.5.1"
tar = "0.4.38"
flate2 = "1.0.24"
git-rs = { path = "../git-rs" }
wharf = { git = "https://github.com/seasproject/wharf" }
tokio-scoped = "0.2.0"
futures-util = "0.3.24"
